עדכון שם קובץ למעבר לאחר הכנסת סיסמא

--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
                     messageDiv.className = 'text-center mb-4 text-green-500 font-medium';
                     
                     // הפנייה לדף הניהול שלך (שנה את זה לשם הדף הרלוונטי)
-                    window.location.href = 'dashboard.html'; 
+                    window.location.href = 'index.html'; 
                 })
                 .catch((error) => {
                     // כישלון
